fix gd z-index issues throughout! Adds backdrop for Actions dropdown. Cleans layout throughout.

--- a/src/components/shared/BcToast.scss
+++ b/src/components/shared/BcToast.scss
@@ -3,17 +3,16 @@
 
 .Processor {
     position: absolute;
-    width: 100%;
-    height: 90px;
+    z-index: 2;
+    width: 36px;
+    height: 62px;
     top: 50%;
     transform: translateY(-50%);
-    right: 0px;
-    z-index: 1;
+    right: 128px;
     &__Button {
-        top: 50%;
-        right: 124px;
-        transform: translateY(-50%);
-        position: absolute;       
+        position: absolute;
+        width: 36px;
+        top: 50%; transform: translateY(-50%);
         background-color: transparent;
         svg {
             fill: $secondary;
@@ -27,24 +26,32 @@
             svg {fill: $secondary-hover; }
         }
     }
-    .Dropdown__Open {
-        width: 100%;
-        max-width: 600px;
-        margin: 0 auto;
-        position: relative;
-    }
-
 }
 
+.ProcessorDropdown {
+    position: relative;
+    height: 0px;
+    overflow: hidden;
+    transition: all .15s linear;
+}
+
+.ProcessorDropdown__Open {
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    margin: 0 auto;
+    position: absolute;
+    top: 77px;
+    top: 0;
+    right: 0;
+    z-index: 2;
+}
 
 .Toast {
     position: absolute;
-    top: 77px;
-    margin-left: -15px;
-    margin-right: -15px;
-    left: 0;
+    top: 64px;
+    right: -15px;
     width: calc(100% + 30px);
-    z-index: 1;
     max-width: 600px;
     margin: 0 auto;
     .Item {
@@ -65,7 +72,7 @@
                 margin-bottom: 5px;
                 margin-top: 5px;
             }
-            a { color: #aaa; }
+            a { }
         }
         .Status {
             display: flex;
