--- a/src/components/shared/Modal.scss
+++ b/src/components/shared/Modal.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    z-index: 1;
+    z-index: 99;
     .Close { 
         position: absolute; top: 25px; right: 25px; 
         background: none;
